# site-admin

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  config.py  google_cloud_service_account_example.json  mypy.ini  package.json  project.env  pyproject.toml  start_server.sh  tox.ini  version.sh  webpack.config.js
.github/workflows/: build.yml  python-app.yml  test.yaml
app/: __init__.py  database.py
app/commands/: __init__.py
app/controllers/: __init__.py  action_logs.py  actions.py  notification.py  s3_bucket.py
app/forms/: __init__.py  auth.py  case.py  question.py  stack.py  user.py
app/schema/: __init__.py  case.py  enums.py  push_notification.py
app/static/css/: styles.css
app/static/js/: admin.d.ts  base.d.ts  base.js  candidate.d.ts  case.d.ts  flash.d.ts  main.js  mainmin.js  question.d.ts  stack.d.ts  user.d.ts  user.js  utils.d.ts
app/templates/: base.html  confirm_modal.html  header.html  sidebar.html
app/templates/action/: actions.html
app/templates/admin/: add.html  admins.html  edit.html
app/views/: __init__.py  actions.py  admin.py  auth.py  candidate.py  case.py  client.py  quiz.py  stack.py  user.py
migrations/versions/: 2922e0e76285_initial_migration.py  7554abf7d2fd_init_migration.py  ace11501e3ae_initial_migration.py  b581353d04f2_.py
src/: admin.ts  base.ts  candidate.ts  case.ts  flash.ts  main.ts  question.ts  stack.ts  styles.css  user.ts  utils.ts
tests/: conftest.py  test_auth.py  test_case.py  test_questions.py  test_stack.py  test_users.py  utils.py
tests/db/: __init__.py
(+13 files in other folders)
