[tool.poetry]
name = "flask.app"
version = "0.1.0"
description = ""
authors = ["denys <denysburimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-mail = "^0.9.1"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
click = "^8.1.3"
email-validator = "^1.3.1"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.7"
alchemical = "^0.7.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
boto3 = "^1.28.11"
filetype = "^1.2.0"
boto3-stubs = "^1.28.12"
firebase-admin = "^6.2.0"
flask-sqlalchemy = "^3.0.5"
types-passlib = "^1.7.7.13"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
faker = "^18.3.1"
pytest-mock = "^3.11.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
